--- a/index.html
+++ b/index.html
@@ -93,17 +93,8 @@
                     <hr class="star-primary">
                 </div>
             </div>
+            <a href = "WebsiteProposal.github.io">Website</a>
 
-    <section id="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
-                    <hr class="star-primary">
-                </div>
-            </div>
-            </div>
-           </section>
     <!-- About Section -->
     <section class="success" id="about">
         <div class="container">
