--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <hr class="star-primary">
                 </div>
             </div>
-            <a href = "WebsiteProposal.github.io">Website</a>
+            <a href = "WebsiteProposal.github.io"><p>Website</p></a>
 
     <!-- About Section -->
     <section class="success" id="about">
