--- a/index.html
+++ b/index.html
@@ -93,7 +93,15 @@
                     <hr class="star-primary">
                 </div>
             </div>
-            <a href = "WebsiteProposal.github.io"><p>Website</p></a>
+            <hr>
+    <section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <a href = "markpatacsil.github.io"><h2>Website Project</h2></a>
+                    <hr class="star-primary">
+                </div>
+            </div>
 
     <!-- About Section -->
     <section class="success" id="about">
