--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <a href = "markpatacsil.github.io"><h2>Website Project</h2></a>
+                    <a href = "https://patacsilmark.github.io/markpatacsil.github.io/"><h2>Website Project</h2></a>
                     <hr class="star-primary">
                 </div>
             </div>
