--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="intro-text">
                         <span class="name">MARK JOSHUA D. PATACSIL</span>
                         <hr class="star-light">
-                        <span class = "head">Basic and Proficient knowledge in
+                        <span class = "head">Basic and Proficient knowledge in</span>
                         <hr class="star-light">
                         <span class="skills">Web Developing - Network Administrator - Java Programming</span>
                     </div>
