--- a/index.html
+++ b/index.html
@@ -120,13 +120,23 @@
                 <div class="col-lg-4">
                     <p>Major in Network and Security Track</p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                    </a>
-                </div>
             </div>
         </div>
     </section>
+            <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <div class="intro-text">
+                        <span class="name">MARK JOSHUA D. PATACSIL</span>
+                        <hr class="star-light">
+                        <span class = "head">Basic and Proficient knowledge in</span>
+                        <hr class="star-light">
+                        <span class="skills">Web Developing - Network Administrator - Java Programming</span>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <!-- Contact Section -->
     <section id="contact">
