--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Mark Joshua D. Patacsil</p>
-                    <p>BSIT Student at the University of the Cordilleras</p>
+                    <p>Mark Joshua D. Patacsil BSIT student at the University of the Cordilleras</p>
+
                 </div>
                 <div class="col-lg-4">
                     <p>Major in Network and Security Track</p>
