--- a/index.html
+++ b/index.html
@@ -101,30 +101,13 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="./Portfolio - Leonard Prim Francis G. Reyes_files/elibrary.PNG" class="img-responsive" alt="">
+                        <img src="img/1.PNG" class="img-responsive" alt="">
                     </a>
                 </div>
                 
             </div>
         </div>
     </section>
-   <section id="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
-                    <hr class="star-primary">
-                </div>
-            </div>
-            <hr>
-    <section id="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <a href = "https://patacsilmark.github.io/markpatacsil.github.io/"><h2>Website Project</h2></a>
-                    <hr class="star-primary">
-                </div>
-            </div>
 
     <!-- About Section -->
     <section class="success" id="about">
