--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/1.PNG" class="img-responsive" alt="">
+                        <img src="1.PNG" class="img-responsive" alt="">
                     </a>
                 </div>
                 
