--- a/index.html
+++ b/index.html
@@ -95,6 +95,32 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
+                    <h2>Website Project</h2>
+                    <a href="https://patacsilmark.github.io/markpatacsil.github.io/" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="1.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+    
+    <section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Portfolio</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 portfolio-item">
+                    <h2>My Resume</h2>
                     <a href="https://patacsilmark.github.io/markpatacsil.github.io/" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
