--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 portfolio-item" align = "center">
                     <h2>My Resume</h2>
                     <a href="https://patacsilmark.github.io/markpatacsil.github.io/" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
