--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <h2>Website Project</h2>
+                    <h3>Website Project</h3>
                     <a href="https://patacsilmark.github.io/markpatacsil.github.io/" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -108,7 +108,7 @@
                 
             </div>
             <div class="col-sm-4 portfolio-item">
-                    <h2>Website Project</h2>
+                    <h3>My Resume</h3>
                     <a href="https://patacsilmark.github.io/markpatacsil.github.io/" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
