--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
                 
             </div>
-            <div class="col-sm-4 portfolio-item">
+            <div class="col-sm-4 portfolio-item" align = "right">
                     <h3>My Resume</h3>
                     <a href="https://patacsilmark.github.io/markpatacsil.github.io/" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
