--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 portfolio-item" align = "center">
                     <h3>Website Project</h3>
                     <a href="https://patacsilmark.github.io/markpatacsil.github.io/" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -107,7 +107,7 @@
                 </div>
                 
             </div>
-            <div class="col-sm-4 portfolio-item" align = "right">
+            <div class="col-sm-4 portfolio-item" align = "center">
                     <h3>My Resume</h3>
                     <a href="https://patacsilmark.github.io/markpatacsil.github.io/" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -115,7 +115,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="1.png" class="img-responsive" alt="">
+                        <img src="1.png" class="img-responsive" alt="" align = "right">
                     </a>
                 </div>
                 
