--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
             <div class="col-sm-4 portfolio-item" align = "center">
                     <h3>My Resume</h3>
                     <a href="https://patacsilmark.github.io/markpatacsil.github.io/" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
+                        <div class="caption" align = "right">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="1.png" class="img-responsive" alt="" align = "right">
+                        <img src="1.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 
