--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-circle" src="2.jpg" alt="">
+                    <img class="img-circle" src="2.jpg" alt="" width="304" height="236">
                     <div class="intro-text">
                         <span class="name">MARK JOSHUA D. PATACSIL</span>
                         <hr class="star-light">
