--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		<img src="2.jpg" alt="Mountain View" style="width:150px;height:200px;"
 		align="right">
 		<h1 style="font-family: Times New Roman; font-size: 30px;"><em><strong><p align="Center">Mark Joshua D. Patacsil</strong></em></h1></p>
-		<h2 style="font-family: Times New Roman; font-size: 18px;" align="Center">Citcs 2</h2>
+		<h2 style="font-family: Times New Roman; font-size: 18px;" align="Center">CITCS 3</h2>
         <a href="Gmail.com"> <p align="Center">asfdgmarkieee@gmail.com</p></a>
 		<p align="Center">#109 Brookspoint Aurora Hill, Baguio City</p>
 		<p align="Center">Contact No.: 09358572741</p>
