--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="1.png" class="img-responsive" alt="">
+                        <img src="w1.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 
             </div>
-		 <div class="row">
+		 <div class="col">
                 <div class="col-sm-4 portfolio-item" align = "center">
                     <h3>Website 2</h3>
                     <a href="https://patacsilmark.github.io/m.github.io/" class="portfolio-link" data-toggle="modal">
@@ -139,7 +139,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="1.png" class="img-responsive" alt="">
+                        <img src="w2.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 
