--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
                 
             </div>
-		 <div class="row" align = "right">
+		 <div class="row">
                 <div class="col-sm-4 portfolio-item" align = "center">
                     <h3>Website 2</h3>
                     <a href="https://patacsilmark.github.io/m.github.io/" class="portfolio-link" data-toggle="modal">
