--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                 </div>
                 
             </div>
-		<br>
 	             </div>
  		<br>
+	</section>
  		        <section id="portfolio">
          <div class="container">
              <div class="row">
