--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
                     <hr class="star-primary">
                 </div>
             </div>
+		</div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item" align = "center">
-                    <h3>Website Project.</h3>
+                    <h3>Website Project</h3>
                     <a href="https://patacsilmark.github.io/markpatacsil.github.io/" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -106,7 +107,7 @@
                     </a>
                 </div>
 		</div>
-		</div>
+		
             
     <div id="header">
 		<img src="2.jpg" alt="Mountain View" style="width:150px;height:200px;"
