--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="1.png" class="img-responsive" alt="">
+                        <img src="w1.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 
@@ -139,7 +139,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="1.png" class="img-responsive" alt="">
+                        <img src="w2.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 
