--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
                     <hr class="star-primary">
                 </div>
             </div>
+<div class="row">
+	<div class="col-sm-6 portfolio-item" align = "center">
             <div class="row">
                 <div class="col-sm-4 portfolio-item" align = "center">
                     <h3>Website 1</h3>
@@ -142,7 +144,8 @@
                         <img src="w2.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                
+                </div>
+		</div>
             </div>
     <div id="header">
 		<img src="2.jpg" alt="Mountain View" style="width:150px;height:200px;"
@@ -661,5 +664,4 @@
     <script src="js/freelancer.min.js"></script>
 
 </body>
-
 </html>
