--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
                       <div class="col-sm-4 portfolio-item" align = "center">
                     <h3>Resume</h3>
-                    <a href="https://patacsilmark.github.io/markpatacsil.github.io/" class="portfolio-link" data-toggle="modal">
+                    <a href="https://patacsilmark.github.io/mj.github.io/" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
@@ -137,7 +137,7 @@
                         </div>
                         <img src="w1.png" class="img-responsive" alt="">
                     </a>
-                </div>
+                
 
                 <div class="col-sm-4 portfolio-item" align = "center">
                     <h3>Website 2</h3>
