--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                 <div class="col-sm-4 portfolio-item" align = "center">
                     <h3>Website 2</h3>
-                    <a href="https://patacsilmark.github.io/m.github.io/" class="portfolio-link" data-toggle="modal">
+                    <a href="https://patacsilmark.github.io/markpatacsil.github.io/" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
