--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
                         </div>
                         <img src="1.png" class="img-responsive" alt="">
                     </a>
+		    </div>
                 
-                      <div class="col-sm-4 portfolio-item" align = "center">
+               <div class="col-sm-4 portfolio-item" align = "center">
                     <h3>Resume</h3>
                     <a href="https://patacsilmark.github.io/mj.github.io/" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
