--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                     </a>
                 </div>
             </div>
+		</div>
 		<br>
 		        <section id="portfolio">
         <div class="container">
