--- a/index.html
+++ b/index.html
@@ -137,11 +137,12 @@
                         </div>
                         <img src="w1.png" class="img-responsive" alt="">
                     </a>
+		    </div>
                 
 
                 <div class="col-sm-4 portfolio-item" align = "center">
                     <h3>Website 2</h3>
-                    <a href="https://patacsilmark.github.io/markpatacsil.github.io/" class="portfolio-link" data-toggle="modal">
+                    <a href="https://patacsilmark.github.io/m.github.io/" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
@@ -151,6 +152,7 @@
                     </a>
                 </div>
             </div>
+		   
    
 
     <!-- About Section -->
