--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </a>
                 </div>
          <div class="col-sm-4 portfolio-item" align = "center">
-                    <h3>Website </h3>
+                    <h3>Website 3</h3>
                     <a href="https://patacsilmark.github.io/j.github.io/" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
